# WatchYourself

./: .gitignore  Makefile  README.md  pyproject.toml
src/watch/: analysis.py  util.py  watch.py
src/watchyourself/: analysis.py  report.py  util.py  visualize.py  watch.py
tests/: test_classify.py
