[project]
name = "watchyourself"
version = "0.0.1"
description = "A tool for watching yourself screen usage"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["watchyourself", "daily", "report"]

authors = [
  {name = "Qi Zhan", email = "qizhan@zju.edu.cn" }
]
maintainers = [
  {name = "Qi Zhan", email = "qizhan@zju.edu.cn" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/Qi-Zhan/WatchYourself"
"Bug Reports" = "https://github.com/Qi-Zhan/WatchYourself/issues"
"Source" = "https://github.com/Qi-Zhan/WatchYourself"

[project.scripts]
watchyourself = "watchyourself.watch:main"
watchyourself_report = "watchyourself.report:main"


[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
